kubedefs/appdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prodapp
  labels:
    app: prodapp
spec:
  replicas: 1 # Desired number of pods
  selector:
    matchLabels:
      app: prodapp
  template:
    metadata:
      labels:
        app: prodapp
    spec:
      containers:
      - name: prodapp
        image: saurabhkulkarni12/productapp
        imagePullPolicy: Always
        ports:
        - name: prodapp-port  
          containerPort: 8080
