kubedefs/dbdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proddb
  labels:
    app: proddb
spec:
  replicas: 1 # Desired number of pods
  selector:
    matchLabels:
      app: proddb
  template:
    metadata:
      labels:
        app: proddb
    spec:
      containers:
      - name: proddb
        image: saurabhkulkarni12/productdb
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: prod-db-data
        ports:
        - name: proddb-port  
          containerPort: 3306
      volumes:
        - name: prod-db-data
          persistentVolumeClaim:
            claimName: db-pv-claim
