kubedefs/appingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prodapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: prodcrudapp.spknkmhd.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prodapp-service
            port:
              number: 8080
